@@ -37,6 +37,7 @@ std::string duration_to_string (std::uint64_t);
 std::int64_t get_db_schema_version (mobius::core::database::database);
 std::string get_username_from_path (const std::string &);
 std::pair<std::string, std::string> get_app_from_path (const std::string &);
+bool is_encrypted (const mobius::core::bytearray &);
 
 } // namespace mobius::extension::app::chromium
 
