@@ -27,7 +27,7 @@ extern "C"
 {
     const char *EXTENSION_ID = "app-utorrent";
     const char *EXTENSION_NAME = "App uTorrent";
-    const char *EXTENSION_VERSION = "1.1";
+    const char *EXTENSION_VERSION = "1.2";
     const char *EXTENSION_AUTHORS = "Eduardo Aguiar";
     const char *EXTENSION_DESCRIPTION = "µTorrent/µTorrent Web support";
 } // extern "C"
